<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>neo_waypoint_follower</name>
  <version>0.0.1</version>
  <description>
  A ROS 2 package providing waypoint saving and autonomous waypoint looping functionality for Neobotix ROX robots. 
  </description>
  <maintainer email="adarshkaran01@gmail.com">adarsh</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>yaml-cpp</depend>
  <depend>std_srvs</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>nav_msgs</depend>
  <depend>rcl_interfaces</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
